updated pixel map with CH edits

--- a/colab_notebooks/landsat_C2_ST_manu_v6.ipynb
+++ b/colab_notebooks/landsat_C2_ST_manu_v6.ipynb
@@ -737,7 +737,6 @@
           "base_uri": "https://localhost:8080/",
           "height": 463
         },
-        "cellView": "form",
         "outputId": "42a92228-93a6-4672-a66e-a89e644eca77"
       },
       "source": [
@@ -775,9 +774,9 @@
         "print(\"\\n\\nTotal # of lake pixels: \", totalpixels);\n",
         "print(f\"{pctLakeCoverage}% of available lake pixels is\", int(pixel_min))\n",
         "\n",
-        "pixel_map = folium.Map(location=[center_lat,center_lon],zoom_start=10, width=600, height=600)\n",
-        "basemaps['Google Satellite'].add_to(pixel_map)\n",
-        "pixel_map.add_ee_layer(geo,{},'pixels over lake')\n",
+        "pixel_fig = folium.Figure(width=\"50%\")\n",
+        "pixel_map = folium.Map(location=[center_lat,center_lon],zoom_start=11).add_to(pixel_fig)\n",
+        "basemaps['Google Maps'].add_to(pixel_map)\n",
         "display(pixel_map)"
       ],
       "execution_count": null,
