fixed error in histo codeblock; added some explanatory text; added note about errors when bringing GEE objects client-side

--- a/colab_notebooks/landsat_C2_ST_manu_v6.ipynb
+++ b/colab_notebooks/landsat_C2_ST_manu_v6.ipynb
@@ -8,7 +8,6 @@
       "collapsed_sections": [
         "DBZzaGgqpr8W"
       ],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -294,17 +293,17 @@
         "cellView": "form"
       },
       "source": [
-        "#@markdown __Run this block__ after inputting your coordinates below.\n",
+        "#@markdown __Run this block__ after inputting your coordinates below. Note that your coordinates must extend beyond the extent of the lake and can not be a centroid location.\n",
         "#@markdown Do not run this block if you are using Option B\n",
         "\n",
         "#@markdown `lat1` = North\n",
-        "lat1 = '43.4320'  #@param {type:\"string\"}\n",
+        "lat1 = '40.60130'  #@param {type:\"string\"}\n",
         "#@markdown `lat2` = South\n",
-        "lat2 = '43.3162'  #@param {type:\"string\"}\n",
+        "lat2 = '40.50458'  #@param {type:\"string\"}\n",
         "#@markdown `lon1` = West\n",
-        "lon1 = '-72.0923'  #@param {type:\"string\"}\n",
+        "lon1 = '-105.180297'  #@param {type:\"string\"}\n",
         "#@markdown `lon2` = East\n",
-        "lon2 = '-72.0154'  #@param {type:\"string\"}\n",
+        "lon2 = ' -105.140345'  #@param {type:\"string\"}\n",
         "\n",
         "use_user_input_file = \"no\"\n",
         "try:\n",
@@ -416,14 +415,17 @@
         "cellView": "form"
       },
       "source": [
-        "#@markdown The default path for any exports is in the Colab Notebooks directory \n",
-        "#@markdown within Google Drive. If preferred, it can be changed here\n",
-        "output_dir = \"/content/drive/MyDrive/NASA Landsat Temperature Product/Colab Output/C2_20211112\" #@param {type:\"string\"}\n",
+        "#@markdown We suggest saving the lakeCoSTR data to it's own folder in your Google Drive. \n",
+        "#@markdown Replace your lake name where the following prompts read 'LAKENAME'. These folders\n",
+        "#@markdown will be automatically created within this script.\n",
         "\n",
-        "#@markdown Please indicate the name of the final foler in your output directory:\n",
-        "short_dir = \"C2_20211112\"#@param {type:'string'}\n",
+        "output_dir = \"/content/drive/MyDrive/lakeCoSTR_output/LAKENAME/\" #@param {type:\"string\"}\n",
+        "\n",
+        "#@markdown Please indicate the name of the final foler in your output directory above:\n",
+        "short_dir = \"LAKENAME\"#@param {type:'string'}\n",
+        "\n",
         "#@markdown Enter a file naming prefix for any exports (no spaces or special characters)\n",
-        "file_prefix = \"C2_v2\" #@param {type:\"string\"}\n",
+        "file_prefix = \"C2_v2_LAKENAME\" #@param {type:\"string\"}\n",
         "\n",
         "if not os.path.exists(output_dir):\n",
         "  os.makedirs(output_dir)\n",
@@ -451,7 +453,8 @@
         "#@markdown Boundaries of water bodies are automatically detected using the JRC \n",
         "#@markdown Global Surface Water Mapping Layer dataset of percent water occurrence. \n",
         "#@markdown By default, a pixel has to be classified as water at least 55% of the \n",
-        "#@markdown time. This is defined as `pctTime`\n",
+        "#@markdown time. This is defined as `pctTime`. If your lake of interest experiences \n",
+        "#@markdown significant fluctuations of lake level, we suggest using a higher percentage than the default. \n",
         "\n",
         "#@markdown <p>More information on this dataset can be found at https://doi.org/10.1038/nature20584\n",
         "\n",
@@ -470,7 +473,7 @@
       "source": [
         "#@markdown Landsat scenes from both Tier 1 and Tier 2 of Collection 2 are \n",
         "#@markdown included for possible use. From Tier 2, only scenes that are processed \n",
-        "#@markdown to L1T with a combined RMS error of no greater than 30 meters are \n",
+        "#@markdown to L1T with a combined RMS error of no greater than 24 meters are \n",
         "#@markdown considered.\n",
         "rmse = 24  #@param {type: \"number\"}\n",
         "#@markdown __Run this block__ after inputting the above parameter"
@@ -488,11 +491,11 @@
         "#@markdown Landsat records begin in 1984 with Landsat 4 TM. \n",
         "#@markdown Enter the year range that you want to search, as well as months of \n",
         "#@markdown the year. To search all months, `m1 = 1` and `m2 = 12` <p>\n",
-        "#@markdown <p>First year (y1) and last year (y2). Years are inclusive.<p>\n",
+        "#@markdown <p>First year (y1) and last year (y2). Years are inclusive, minimum value is 1982. <p>\n",
         "#@markdown <p>First month (m1) and last month (m2). Months are inclusive.<p>\n",
-        "#@markdown <p>Note that this method has only been developed for lake ice-off temperature estimation. \n",
+        "#@markdown <p>Note that this method has only been developed for temperature estimation where there is no ice present on the lake. \n",
         "\n",
-        "y1 = 1980 #@param {type: \"number\"}\n",
+        "y1 = 2000 #@param {type: \"number\"}\n",
         "y2 = 2020 #@param {type: \"number\"}\n",
         "\n",
         "m1 = 5 #@param {type: \"number\"}\n",
@@ -512,8 +515,8 @@
       "source": [
         "#@markdown __Run this block__ to calculate the Landsat path(s) and row(s) that \n",
         "#@markdown overlap the extent of Option A/B It will print as\n",
-        "#@markdown `WRS2 Path/Row: PPPRRR` where `PPP` is the three-digit path, and \n",
-        "#@markdown `RRR` is the three-digit row. This block also determines the correct\n",
+        "#@markdown `WRS2 Path/Row: PPPRRR` where `PPP` is the three-digit path (south/north orientation), and \n",
+        "#@markdown `RRR` is the three-digit row (east-west orientation). This block also determines the correct\n",
         "#@markdown CRS for the GEE analyses.\n",
         "\n",
         "if use_user_input_file==\"yes\":\n",
@@ -612,7 +615,7 @@
       },
       "source": [
         "#@markdown This code block reduces the bounding box defined above to the largest water body present, and then counts the 30m pixels within the water body.<p>\n",
-        "#@markdown Landsat scenes included in analysis must have a minimum percentage of clear lake pixels available (these are discontinuous pixels)\n",
+        "#@markdown Landsat scenes included in analysis must have a minimum percentage of clear lake pixels available (these are discontinuous pixels). Default is 25%.\n",
         "pctLakeCoverage = 25 #@param\n",
         "#@markdown __Run this block__ after inputting the above parameter\n",
         "\n",
@@ -648,8 +651,20 @@
         "pixel_fig = folium.Figure(width=\"50%\")\n",
         "pixel_map = folium.Map(location=[center_lat,center_lon],zoom_start=11).add_to(pixel_fig)\n",
         "basemaps['Google Maps'].add_to(pixel_map)\n",
+        "pixel_map.add_ee_layer(geo, {}, 'lake area')\n",
         "display(pixel_map)"
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "RogksEfOmFh5"
+      },
       "execution_count": null,
       "outputs": []
     },
@@ -841,13 +856,13 @@
         "def generate_histogram(img):\n",
         "  img = ee.Image(img)\n",
         "  fhisto = img.reduceRegion(**{\n",
-        "      \"reducer\": ee.Reducer.fixedHistogram(-5,30,350).unweighted(),\n",
+        "      \"reducer\": ee.Reducer.fixedHistogram(-5,30,70).unweighted(),\n",
         "      \"geometry\": geo,\n",
         "      \"scale\": 30,\n",
         "      \"maxPixels\": 5e9\n",
         "  })\n",
         "  return img.set('histogram',fhisto.get('surface_temp'))\n",
-        "print(\"Will generate histograms with a fixed x-axis between -5 - 30 deg C in 0.1 degree bins\")\n"
+        "print(\"Will generate histograms with a fixed x-axis between -5 - 30 deg C in 0.5 degree bins\")\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -865,6 +880,10 @@
         "# @markdown loop, which provides much more Python functionality.<p><mark>__This step \n",
         "# @markdown could take some time to run</mark> depending on the length of the \n",
         "# @markdown ImageCollection.__\n",
+        "\n",
+        "# @markdown If you recieve an error at this step that *your response size exceeds limit*, \n",
+        "# @markdown you will need to go back and reduce the number of years of data you are requesting. \n",
+        "\n",
         "print(\"Start:\", strftime(\"%x %X\"))\n",
         "imgs_histo = countedPixels.map(generate_histogram)\n",
         "generate_arrays = imgs_histo.map(createArrays)\n",
@@ -966,11 +985,10 @@
         "\n",
         "print(\"Histograms will be saved at \", histo_dir)\n",
         "\n",
-        "#reorient data\n",
-        "histos = appended_dfs.set_index('bin')\n",
+        "histos = appended_dfs\n",
         "#list of scenes\n",
         "scenes = histos.columns\n",
-        "histos = pd.DataFrame.transpose(histos)\n",
+        "histos = pd.DataFrame.transpose(histos) #reorient data\n",
         "#reset index\n",
         "histos = histos.reset_index()\n",
         "histos_vert = histos.melt(id_vars=['index'])\n",
@@ -984,7 +1002,7 @@
         "  plt.xlabel('temperature (deg C)')\n",
         "  plt.title(scenes[i])\n",
         "  plt.savefig(histoname)\n",
-        "  plt.show()\n",
+        "  print('Saving histogram for Landsat scene ', scenes[i], ' at ', histoname)  \n",
         "  plt.close()\n",
         "\n",
         "print(\"Finish:\", strftime(\"%x %X\"), 'Your histograms should now be visible at ', histo_dir)"
@@ -1008,7 +1026,7 @@
         "cellView": "form"
       },
       "source": [
-        "#@markdown Execute this cell block to export a CSV containing temperature and related image metadata\n",
+        "#@markdown Execute this cell block to export a CSV containing temperature and related image metadata to your Google Drive.\n",
         "\n",
         "def exportWholeLakeStats(img):\n",
         "  img = ee.Image(img).clip(geo)\n",
